--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,13 @@ body {
   margin: 0 auto;
 }
 
+.map {
+  outline: 1px solid red;
+  width: 100%;
+  height: 400px;
+  margin: 20px 0;
+  border-radius: 6px;
+}
 
 .weather {
   display: flex;
