--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 * {
   /* outline: 1px solid red; */
   margin: 0;
+  border: 0;
+  padding: 0;
 }
 
 body {
@@ -36,17 +38,21 @@ body {
   border-radius: 6px;
 }
 
+.weather #description {
+  margin: 10px 0;
+}
+
 .weather img {
   height: 100px;
   width: 100px;
+  border: 0;
   border-radius: 6px;
   outline: 3px solid black;
   margin: 10px 0;
 }
 
 .location {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   font-weight: bold;
 }
 
