--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 * {
   /* outline: 1px solid red; */
   margin: 0;
-  border: 0;
+  /* border: 0; */
   padding: 0;
 }
 
@@ -100,7 +100,7 @@ body {
   }
 }
 
-.tempUnitDropdown {
+.unitsDropdown {
   position: absolute;
   margin-top: 90px;
   /* top: 100%; */
